# jiangsu-jqyeviuijksd

./: .gitignore  README.md  console.spec  prefix.json  pyproject.toml
jiangsu_jqyeviuijksd/: __init__.py  answer_question.py  common.py  console.py  get_question.py  get_session.py  questions.json  school_prefix.py
tests/: test_jiangsu_jqyeviuijksd.py
