[tool.poetry]
name = "jiangsu-jqyeviuijksd"
version = "0.1.2"
description = "可用于江苏就业知识竞赛的自动答题, 主要用于 Python 和 HTTP 的入门"
authors = ["provefar <provefars@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["就业知识竞赛", "就业知识", "江苏", "自动答题", "Python 新手入门"]
homepage = "https://github.com/myuanz/jiangsu-jqyeviuijksd"
repository = "https://github.com/myuanz/jiangsu-jqyeviuijksd"

[tool.poetry.dependencies]
python = ">=3.7"
requests = ">=2.24.0"
muggle-ocr = "^1.0.3"
lxml = "^4.5.2"
faker = "^4.1.3"
pathlib2 = "^2.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
ipython = "^7.18.1"
jupyter = "^1.0.0"
jupyterlab_code_formatter = "^1.3.6"
jupyter_nbextensions_configurator = "^0.4.1"
jupyterlab = "^2.2.8"
pyinstaller = "^4.0"

[tool.poetry.scripts]
js-job = "jiangsu_jqyeviuijksd.console:main"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

